# BaxterMotionPlanning

./: README.md  baxter.urdf
baxter_description/: CMakeLists.txt  package.xml
baxter_description/launch/: display.launch.py
baxter_description/meshes/head/: HAT.STL  sombrero.dae
baxter_description/rviz/: display.rviz
baxter_description/urdf/electric_gripper/: baxter_electric_gripper.xacro
baxter_description/urdf/electric_gripper/fingers/: basic_hard_tip.xacro  extended_narrow.xacro  paddle_tip.xacro
baxter_description/urdf/robots/: baxter.urdf.xacro  baxter_standalone.urdf.xacro
baxter_description/urdf/sensors/: camera_color.urdf.xacro  camera_rgbd.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro
baxter_moveit_config/: CMakeLists.txt  package.xml
baxter_moveit_config/config/: baxter.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
baxter_moveit_config/launch/: demo.launch.py  move_group.launch.py
baxter_moveit_config/rviz/: moveit.rviz
gazebo_baxter/: CMakeLists.txt  package.xml
gazebo_baxter/config/: controllers.yaml  ros_gz_bridge.yaml
gazebo_baxter/launch/: gazebo.launch.py
gazebo_baxter/urdf/robots/: baxter_gazebo.urdf.xacro
gazebo_baxter/urdf/sensors/: camera_color_gazebo.urdf.xacro  camera_rgbd_gazebo.urdf.xacro  imu_gazebo.urdf.xacro  lidar_gazebo.urdf.xacro
gazebo_baxter/worlds/: empty.sdf
