<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt2 configuration for Baxter robot (ROS2 Jazzy + Gazebo Harmonic)</description>
  <maintainer email="sofiguerraj@gmail.com">angysof16</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description -->
  <depend>baxter_description</depend>
  <depend>gazebo_baxter</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <!-- MoveIt2 core -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_simple_controller_manager</depend>

  <!-- RViz MoveIt plugin -->
  <depend>moveit_ros_visualization</depend>
  <depend>rviz2</depend>

  <!-- ros2_control bridge -->
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>